# INR_USD_rates

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  MANIFEST.in  Procfile  README.md  app.json  code.ipynb  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  run_app.bat  run_web_app.py  setup.py  setup_environment.py
.github/workflows/: deploy.yml
inr_usd_rates/: __init__.py  config.py  email_notifier.py  exchange_rate_tracker.py  main.py  scheduler.py  web_app.py
inr_usd_rates/static/: style.css
inr_usd_rates/templates/: index.html
